NestedDocument tests